@@ -1,17 +1,21 @@
-module kerb_auth_module = {
+module MODULE_VAR_EXPORT kerb_auth_module = {
 	STANDARD_MODULE_STUFF,
-	NULL,				/* initializer */
-	kerb_dir_config,		/* dir config creater */
-	NULL,				/* dir merger */
-	NULL,				/* server config */
-	NULL,				/* merge server config */
-	kerb_auth_cmds,			/* command table */
-	NULL,				/* handlers */
-	NULL,				/* filename translation */
-	kerb_authenticate_user,		/* check_user_id */
-	NULL,				/* check auth */
-	NULL,				/* check access */
-	NULL,				/* type_checker */
-	NULL,				/* fixups */
-	NULL				/* logger */
+	NULL,				/*      module initializer            */
+	kerb_dir_config,		/*      per-directory config creator  */
+	NULL,				/*      per-directory config merger   */
+	NULL,				/*      per-server    config creator  */
+	NULL,				/*      per-server    config merger   */
+	kerb_auth_cmds,			/*      command table                 */
+	NULL,				/* [ 9] content handlers              */
+	NULL,				/* [ 2] URI-to-filename translation   */
+	kerb_authenticate_user,		/* [ 5] check/validate user_id        */
+	NULL,				/* [ 6] check user_id is valid *here* */
+	NULL,				/* [ 4] check access by host address  */
+	NULL,				/* [ 7] MIME type checker/setter      */
+	NULL,				/* [ 8] fixups                        */
+	NULL,				/* [10] logger                        */
+	NULL,				/* [ 3] header parser                 */
+	NULL,				/*      process initialization        */
+	NULL,				/*      process exit/cleanup          */
+	NULL				/* [ 1] post read_request handling    */
 };
